select issue on mobile

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -105,6 +105,16 @@
     opacity: 30%;   
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+}
+
 @media (max-width: 600px) { 
 	.up,
 	.right,
