--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,6 @@
 	box-sizing: border-box;
 }
 
-input,
-textarea,
-button,
-select,
-a,
-div {
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	tap-highlight-color: rgba(0,0,0,0);
-}
-
 body {
 	width: 100vw;
 	height: 100vh;
